buildscript{
    repositories {
        maven { url 'https://jitpack.io' }
        maven { url 'https://maven.aliyun.com/repository/central'}
        mavenCentral()
        mavenLocal()
    }
}
plugins {
    id 'java'
}

group 'top.mrxiaom'
version '2.3'

sourceCompatibility = 11
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
repositories {
    maven { url 'https://jitpack.io' }
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation fileTree(dir: 'libraries', includes: ['*.jar'])
}